many alignment issues fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -559,3 +559,132 @@
         display: none;
     }
   }
+
+
+  /* Dont delete this code . this code is used to  ix the blankspace in right side on mobile view  */
+  @media
+  only screen and (-webkit-min-device-pixel-ratio: 1.5),
+  only screen and (-o-min-device-pixel-ratio: 3/2),
+  only screen and (min--moz-device-pixel-ratio: 1.5),
+  only screen and (min-device-pixel-ratio: 1.5){
+  
+    html,
+    body{
+      width:100%;
+      overflow-x:hidden;
+    }
+  
+  }
+  
+   /* Blanspaace fix code ends here  */
+
+   /* special title code starts */
+  
+  @media (max-width: 768px) {
+      .special-title{
+      margin: 3vh auto;
+      text-align: center;
+      position: relative;
+      color: #FF6D23;
+      font-size: 1.2rem;
+      font-weight: bolder;
+      
+  }
+  .special-title::before{
+      content: "";
+      height: 4px;
+      width: 50vw;
+      background-color: #FF6D23;
+      color: #FF6D23;
+      position: absolute;
+      top: 50%;
+      right: 0;
+      z-index: -2;
+  }
+  .special-title::after{
+      content: "";
+      height: 4px;
+      width: 50vw;
+      background-color: #FF6D23;
+      color: #FF6D23;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      z-index: -2;
+  }
+  
+  .special-span{
+      background: white;
+      padding: 0;
+      padding-left: 5%;
+      padding-right: 5%;
+      padding-bottom: 0;
+  }
+  }
+  
+  @media (min-width: 768px) {
+      .special-title{
+      margin: 5vh auto;
+      text-align: center;
+      position: relative;
+      color: #FF6D23;
+      font-size: 1.7rem;
+      font-weight: bold;
+      
+  }
+  .special-title::before{
+      content: "";
+      height: 7px;
+      width: 50vw;
+      background-color: #FF6D23;
+      color: #FF6D23;
+      position: absolute;
+      top: 50%;
+      right: 0;
+      z-index: -2;
+  }
+  .special-title::after{
+      content: "";
+      height: 7px;
+      width: 50vw;
+      background-color: #FF6D23;
+      color: #FF6D23;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      z-index: -2;
+  }
+  
+  .special-span{
+      background: white;
+      padding: 0;
+      padding-left: 15%;
+      padding-right: 15%;
+      padding-bottom: 0;
+  }
+  }
+  
+  /* special title code ends */
+  
+       /* owl carousel  stars  */
+    .owl-carousel .owl-item img {
+      display: block;
+      width: 100%;
+      border-radius: 15px;
+    }
+    .BO-edit{
+      
+      border-left: 3px solid #FF6D23;
+      font-family: mon-bold !important;
+      text-align: left;
+      color: #000;
+      font-size: 30px !important;
+      padding-left: 5px;
+      margin-left: 15px;
+      margin-top: 25px;
+      font-weight: bold;
+  }
+    
+     /* owl carousel ends */
+  
+  
